fix: dialog padding on small screens

--- a/scss/partials/_dialog.scss
+++ b/scss/partials/_dialog.scss
@@ -17,12 +17,15 @@
   display: inline-block;
   max-height: 100%;
   max-width: 100%;
-  min-width: 320px;
   overflow-y: auto;
-  padding: 4vh 8vw;
   position: relative;
   text-align: left;
   width: auto;
+
+  &__content {
+    min-width: 320px;
+    padding: 4vh 4vw;
+  }
 
   ul {
     list-style: none;
